--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <p class="p1"></p>
     <p class="p2"></p>
+    <div id="container"></div>
+    <table>
+        <tr>
+            <td>
+                ciao
+            </td>
+            <td>
+                mondo
+            </td>
+            <td>
+                hello
+            </td>
+            <td>
+                world
+            </td>
+        </tr>
+    </table>
+    <a href="">www.amazon.com</a>
+    <br>
+    <a href="">www.epicode.com</a>
+    <br>
+    <a href="">www.google.com</a>
+    <br>
+    <a href="">.www.pippo.com</a>
+
+    <ul id="myList">
+        <li>
+            <p>amazon</p>
+        </li>
+        <li>
+            <p>epicode</p>
+        </li>
+        <li>
+            google
+        </li>
+    </ul>
     <script src="js/D10.js"></script>
 </body>
+
 </html>
